--- a/static/classguess.css
+++ b/static/classguess.css
@@ -10,6 +10,7 @@ body{
     background-color: #212529;
     color:#7fffd4;
     margin-top: 6vh;
+    height: 160vh;
 }
 table{
     color: #7fffd4;
